Added about section

--- a/asymmetry/css/style.css
+++ b/asymmetry/css/style.css
@@ -2376,11 +2376,11 @@ form label {
     position: relative;
 }
 
-#gtco-services .feature-left .icon i {
+#gtco-skills .feature-left .icon i {
     color: #cccccc !important;
 }
 
-#gtco-services .feature-left h3 {
+#gtco-skills .feature-left h3 {
     color: #FF5126;
     font-size: 22px;
 }
