--- a/asymmetry/css/style-black.css
+++ b/asymmetry/css/style-black.css
@@ -18,8 +18,8 @@ body {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.7;
-    color: #777;
-    background: #fff;
+    color: white;
+    background: #26282a;
 }
 
 #page {
@@ -115,7 +115,14 @@ figure {
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.15);
 }
 
-#html {
+#html,
+#css,
+#javascript,
+#jquery,
+#mysql,
+#mongodb,
+#node,
+#git {
     position: relative;
 }
 
@@ -887,7 +894,7 @@ form label {
     margin-bottom: 20px;
     line-height: 1.5;
     font-weight: bold;
-    color: #000;
+    color: white;
     position: relative;
     padding-bottom: 10px;
 }
@@ -917,7 +924,7 @@ form label {
 .gtco-heading p {
     font-size: 20px;
     line-height: 1.5;
-    color: #1a1a1a;
+    color: white;
 }
 
 @media screen and (max-width: 768px) {
