--- a/asymmetry/css/style-black.css
+++ b/asymmetry/css/style-black.css
@@ -19,7 +19,7 @@ body {
     font-size: 16px;
     line-height: 1.7;
     color: white;
-    background: #26282a;
+    background: # ;
 }
 
 #page {
@@ -109,7 +109,7 @@ figure {
     width: 100%;
     padding: 20px 0;
     z-index: 1001;
-    background: #fff;
+    background: #2f3133;
     webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.15);
     -moz-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.15);
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.15);
@@ -124,6 +124,11 @@ figure {
 #node,
 #git {
     position: relative;
+}
+
+.buttons {
+    position: fixed;
+    left: 10px; 
 }
 
 @media screen and (max-width: 768px) {
@@ -146,7 +151,7 @@ figure {
 
 .gtco-nav a {
     padding: 0px 10px;
-    color: #000;
+    color: #ffffff;
 }
 
 @media screen and (max-width: 768px) {
