--- a/assymetry/css/style-white.css
+++ b/assymetry/css/style-white.css
@@ -14,7 +14,8 @@
 * ======================================================= */
 
 body {
-    font-family: Corbel;/*"Droid Sans", Arial, sans-serif;*/
+    font-family: Corbel;
+    /*"Droid Sans", Arial, sans-serif;*/
     font-weight: 400;
     font-size: 16px;
     line-height: 1.7;
@@ -78,6 +79,67 @@ figure {
     margin: 0 0 20px 0;
 }
 
+.switch {
+    position: fixed;
+    left: 15px;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    display: none;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked+.slider {
+    background-color: #2196F3;
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+
+/* Rounded sliders */
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
 ::-webkit-selection {
     color: #fff;
     background: #FF5126;
@@ -128,14 +190,13 @@ figure {
 
 .buttons {
     position: fixed;
-    left: 10px; 
+    left: 10px;
 }
 
 @media screen and (max-width: 768px) {
     .gtco-nav {
         padding: 20px 0;
     }
-
     .buttons {
         position: fixed;
         left: 260px;
