--- a/assymetry/css/style-white.css
+++ b/assymetry/css/style-white.css
@@ -63,7 +63,9 @@ a:focus {
 }
 
 p {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    padding: 9px;
+    margin-left: -12px;
 }
 
 h1,
@@ -85,6 +87,7 @@ figure {
     display: inline-block;
     width: 60px;
     height: 34px;
+    margin-top: -11px;
 }
 
 .switch input {
@@ -116,11 +119,11 @@ figure {
 }
 
 input:checked+.slider {
-    background-color: #2196F3;
+    background-color: red;
 }
 
 input:focus+.slider {
-    box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px red;
 }
 
 input:checked+.slider:before {
