--- a/css/style-black.css
+++ b/css/style-black.css
@@ -1357,11 +1357,11 @@ form label {
     display: inline-block;
     width: 25px;
     height: 2px;
-    color: #252525;
+    color: white;
     font: bold 14px/.4 Helvetica;
     text-transform: uppercase;
     text-indent: -55px;
-    background: #252525;
+    background: white;
     transition: all .2s ease-out;
 }
 
@@ -1370,7 +1370,7 @@ form label {
     content: '';
     width: 25px;
     height: 2px;
-    background: #252525;
+    background: white;
     position: absolute;
     left: 0;
     transition: all .2s ease-out;
