--- a/css/style-white.css
+++ b/css/style-white.css
@@ -1188,6 +1188,10 @@ form label {
     *display: inline;
 }
 
+.space {
+    visibility: hidden;
+}
+
 @media screen and (max-width: 768px) {
     #gtco-footer .copyright .pull-left,
     #gtco-footer .copyright .pull-right {
